# picoLLM

./: .env.copy  .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  README.md  __init__.py  dependencies.py  main.py  pyproject.toml
backend/deploy/pg/: Dockerfile
backend/deploy/pg/init/: init_db.sql
backend/deploy/qdrant/: Dockerfile  create_collection.py  production.yml
backend/embeddings/: __init__.py  models.py
backend/models/: http.py
backend/providers/: __init__.py  anthropic.py  openai.py
backend/routes/collections/: filters.py  manager.py  qdrant.py
backend/routes/models/: models.py
backend/routes/providers/: anthropic.py  openai.py
backend/routes/sessions/: chat_sessions.py  export.py
backend/routes/tools/: hybrid_search.py  registry.py  tool_call.py  tools.py  web_search.py
backend/utils/: __init__.py  documents.py  handlers.py  nodes.py  ollama_images.py  title.py
configs/: docker-compose.ollama.yml
docs/: api.md  client.md  providers.md  qdrant.md
frontend/: .dockerignore  .gitignore  Dockerfile  package.json  pnpm-lock.yaml  postcss.config.js  svelte.config.js  vite.config.ts
frontend/src/: app.html  global.d.ts  vite-env.d.ts
frontend/src/components/ChatWindow/: ChatWindow.svelte
frontend/src/components/MessageInput/: MessageInput.svelte
frontend/src/components/Sidebar/: Actions.svelte  Conversations.svelte  Header.svelte  Sidebar.svelte
frontend/src/components/ToolSettingsMenu/: AddToolModal.svelte  ToolSettingsMenu.svelte
frontend/src/components/TopBar/: TopBar.svelte
frontend/src/lib/api/: api.ts  db.ts  export.ts  http.ts  models.ts  ollama.ts  qdrant.ts  sidebar.ts  title.ts  tools.ts
frontend/src/lib/constants/: add-tools.constants.ts  dashboard.constants.ts  global.constants.ts  markdown.constants.ts  params.constants.ts
frontend/src/routes/: +layout.svelte  +page.svelte
nginx/: nginx.conf
(+137 files in other folders)
